--- a/scripts/mac/launchd/localhost.gotradecypto.main.plist
+++ b/scripts/mac/launchd/localhost.gotradecypto.main.plist
@@ -14,9 +14,10 @@
         <string>shi</string>
 
         <!-- 可执行文件路径 -->
+        <key>Program</key>
+            <string>/usr/bin/caffeinate</string>
         <key>ProgramArguments</key>
         <array>
-            <string>/usr/bin/caffeinate</string>
             <string>-i</string>
             <string>/Users/shi/workspace/Github/ichimei0125/gotradecypto/gotradecypto</string>
         </array>
