--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,10 +1,14 @@
-bitflyer:
-  api_key: ""
-  api_secret: ""
+secrets:
+  bitflyer:
+    api_key:
+    api_secret:
 
 trade:
   invest_money: 10000
   cut_loss: 57000
   safe_money: 40000
 
-dry_run: true
+dry_run:
+  bitflyer:
+    XRP_JPY: true
+    FX_BTC_JPY: true
