--- a/config.example.yaml
+++ b/config.example.yaml
@@ -12,3 +12,5 @@ dry_run:
   bitflyer:
     XRP_JPY: true
     FX_BTC_JPY: true
+
+connection_string: tradebot:{password}@tcp(127.0.0.1:3306)/gotradecrypto?charset=utf8mb4&parseTime=True&loc=Local
