--- a/scripts/mac/launchd/localhost.gotradecypto.main.plist
+++ b/scripts/mac/launchd/localhost.gotradecypto.main.plist
@@ -4,11 +4,11 @@
     <dict>
         <!-- 描述任务 -->
         <key>Label</key>
-        <string>localhost.gotradecypto.main</string>
+        <string>localhost.gotradecrypto.main</string>
 
         <!-- 设置工作目录 -->
         <key>WorkingDirectory</key>
-        <string>/Users/shi/workspace/Github/gotradecypto</string>
+        <string>/Users/shi/workspace/Github/gotradecrypto</string>
 
         <key>UserName</key>
         <string>shi</string>
@@ -19,7 +19,7 @@
         <key>ProgramArguments</key>
         <array>
             <string>-i</string>
-            <string>/Users/shi/workspace/Github/gotradecypto/gotradecypto</string>
+            <string>/Users/shi/workspace/Github/gotradecrypto/gotradecrypto</string>
         </array>
 
         <!-- 即使系统处于睡眠状态也运行 -->
@@ -30,9 +30,9 @@
         <true />
 
         <key>StandardOutPath</key>
-        <string>/Users/shi/workspace/Github/gotradecypto/log/main.stdout</string>
+        <string>/Users/shi/workspace/Github/gotradecrypto/log/main.stdout</string>
         <key>StandardErrorPath</key>
-        <string>/Users/shi/workspace/Github/gotradecypto/log/main.stderr</string>
+        <string>/Users/shi/workspace/Github/gotradecrypto/log/main.stderr</string>
 
         <key>ThrottleInterval</key>
         <integer>305</integer>
